--- a/README.rdoc
+++ b/README.rdoc
@@ -1,2 +1,3 @@
-project from Udemy course 
+# project from Udemy course 
+
 [Course Page](https://www.udemy.com/the-complete-ruby-on-rails-developer-course/)
