--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,3 @@
-# project from Udemy course 
+# project for Udemy course 
 
-[Course Page](https://www.udemy.com/the-complete-ruby-on-rails-developer-course/)
+[Course Page](https://www.udemy.com/the-complete-ruby-on-rails-developer-course)
